*** When upgrading, don't forget to: "cd bin ; ./checksetup.pl" ***
*** Also, it is _highly_ advisable to backup your data before upgrading ***

Version 1.8.0

* A new configuration variable $tmpdir is in codestriker.conf for
  unusual setups which can't use the system default temporary
  directory for the creation of temporary files.  Win32 systems are
  the usual culprit.

* The CVS rdiff parser didn't correctly handle new files within the
  diff on Win32 platforms.

* Add more win32 example configuration to codestriker.conf.

* Include the relevant DBD modules in the checksetup.pl dependency
  list, depending on what database system has been configured.

* Some minor fixes to fully support Win32-based CVS repositories,
  including use of the older-style :local:c:\\cvsrep syntax.  Also be
  more robust in handling directory separators as either forward or
  backward slashes, since different versions of CVSNT support this.
  Make sure the CVS executable path is quoted, since it will often
  contain spaces for Win32 environments.

* Improved useability of messages (when Perl modules are missing) for
  Win32 users.

* Now support ODBC and Oracle databases.  The Database
  creation/upgrade code has been modified so that it is properly
  modularised, and so checksetup.pl is far more maintainable.  Adding
  support for new Databases will now be a snap. The file table had to
  be renamed to topicfile, and comment to commentdata to avoid
  reserved word clashes in ODBC and Oracle.

* Added in a new topic listener which records all changes to a
  comment's state, property changes to a topic and when a topic has
  been viewed. Three new database tables have been added to store this
  information, which can be accessed from the metrics tab of a topic.

* Added in the ability for the topic's properties to be changed,
  including the title, author, bug ids, reviewers, cc, repository,
  project, description and state.  Updated the topic listeners to now